<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.logres.LoginRegisterActivity">

    <ImageView
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:background="@drawable/circle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_240sdp"
        android:background="@drawable/circle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_24ssp"
        android:fontFamily="@font/mazzard_bold"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/hello_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mazzard_bold"
        android:letterSpacing="0.04"
        android:textColor="@color/yellow"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/subtitle_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/mail"
        app:startIconTint="@color/grey"
        app:hintTextColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:fontFamily="@font/mazzard_regular"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:hint="@string/mobile_phone"
        android:layout_marginTop="@dimen/_4sdp"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:startIconDrawable="@drawable/phone"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:fontFamily="@font/mazzard_regular"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phone"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:fontFamily="@font/mazzard_regular"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_res"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/mazzard_bold"
        android:letterSpacing="0.04"
        android:text="@string/login_now"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

    <TextView
        android:id="@+id/tv_first_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/mazzard_bold"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_second_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_now"
        android:fontFamily="@font/mazzard_bold"
        android:textColor="@color/purple"
        android:textSize="@dimen/_10ssp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_first_statement"/>


</androidx.constraintlayout.widget.ConstraintLayout>