<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_content"
                android:layout_width="0dp"
                android:layout_height="@dimen/_240sdp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:clickable="true"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/grey">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/bv_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/arrow_back" />
                </eightbitlab.com.blurview.BlurView>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:clickable="true"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="@id/iv_content"
                app:layout_constraintEnd_toEndOf="@id/iv_content"
                app:layout_constraintStart_toStartOf="@id/iv_content"
                app:layout_constraintTop_toTopOf="@id/iv_content"
                app:strokeColor="@color/grey">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/bv_play"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/play" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/mazzard_regular"
                android:textColor="@color/purple"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_content"
                tools:text="Batman" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawablePadding="@dimen/_4sdp"
                android:fontFamily="@font/mazzard_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:drawableStartCompat="@drawable/star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="7.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/mazzard_medium"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_56sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/mazzard_medium"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/mazzard_regular"
                android:textColor="@color/purple"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="September 30, 2017" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/mazzard_medium"
                android:text="@string/synopsis"
                android:textColor="@color/purple"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cg_genre" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="@tools:sample/lorem" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_72sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Space
        android:id="@+id/spacer"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/mazzard_bold"
        android:letterSpacing="0.04"
        android:text="@string/watch_trailer"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spacer"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/mazzard_bold"
        android:letterSpacing="0.04"
        android:text="@string/watch_movie"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spacer"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
        app:strokeColor="@color/purple"
        app:backgroundTint="@color/white"
        app:strokeWidth="@dimen/_2sdp" />


</androidx.constraintlayout.widget.ConstraintLayout>