<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".presentation.movies.screens.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_content"
                android:layout_width="0dp"
                android:layout_height="@dimen/_160sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.zhpan.indicator.IndicatorView
                android:id="@+id/indicator_content"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/vp_content"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:elevation="10dp"
                android:id="@+id/shimmer_vp"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    app:cardBackgroundColor="@color/grey"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/mazzard_bold"
                android:text="@string/movies"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_movies" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:elevation="10dp"
                android:id="@+id/shimmer_movies"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <HorizontalScrollView
                    android:id="@+id/scrollbar_shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_movies_shimmer"/>
                        <include layout="@layout/item_movies_shimmer"/>
                        <include layout="@layout/item_movies_shimmer"/>
                        <include layout="@layout/item_movies_shimmer"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/mazzard_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:text="@string/digital_audio_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shimmer_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_digital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_digital" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:elevation="10dp"
                android:id="@+id/shimmer_digital"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_digital_shimmer" />

                        <include layout="@layout/item_digital_shimmer" />

                        <include layout="@layout/item_digital_shimmer" />

                        <include layout="@layout/item_digital_shimmer" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/mazzard_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:text="@string/series"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shimmer_digital" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_series"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_series" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:elevation="10dp"
                android:id="@+id/shimmer_series"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_series_shimmer"/>
                        <include layout="@layout/item_series_shimmer"/>
                        <include layout="@layout/item_series_shimmer"/>
                        <include layout="@layout/item_series_shimmer"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_96sdp"
                app:layout_constraintTop_toBottomOf="@id/shimmer_series"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>